@@ -13,9 +13,11 @@ import java.util.List;
 import java.util.Set;
 
 public class GrayCode {
+
   public static List<Integer> grayCode(int numBits) {
+
     if (numBits == 0) {
-      return new ArrayList<>(Arrays.asList(0));
+      return new ArrayList<>(List.of(0));
     }
 
     // These implicitly begin with 0 at bit-index (numBits - 1).
@@ -36,7 +38,7 @@ public class GrayCode {
     return bitDifference != 0 && (bitDifference & (bitDifference - 1)) == 0;
   }
 
-  @EpiTest(testfile = "gray_code.tsv")
+  @EpiTest(testDataFile = "gray_code.tsv")
   public static void grayCodeWrapper(TimedExecutor executor, int numBits)
       throws Exception {
     List<Integer> result = executor.run(() -> grayCode(numBits));
@@ -66,9 +68,10 @@ public class GrayCode {
   }
 
   public static void main(String[] args) {
-    System.exit(GenericTest
-                    .runFromAnnotations(
-                        args, new Object() {}.getClass().getEnclosingClass())
-                    .ordinal());
+    System.exit(
+        GenericTest
+            .runFromAnnotations(args, "GrayCode.java",
+                                new Object() {}.getClass().getEnclosingClass())
+            .ordinal());
   }
 }
