@@ -4,13 +4,14 @@ import epi.test_framework.EpiTest;
 import epi.test_framework.GenericTest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class IntAsArrayMultiply {
-  @EpiTest(testfile = "int_as_array_multiply.tsv")
+
+  @EpiTest(testDataFile = "int_as_array_multiply.tsv")
   public static List<Integer> multiply(List<Integer> num1, List<Integer> num2) {
+
     final int sign = num1.get(0) < 0 ^ num2.get(0) < 0 ? -1 : 1;
     num1.set(0, Math.abs(num1.get(0)));
     num2.set(0, Math.abs(num2.get(0)));
@@ -33,16 +34,17 @@ public class IntAsArrayMultiply {
     }
     result = result.subList(firstNotZero, result.size());
     if (result.isEmpty()) {
-      return Arrays.asList(0);
+      return List.of(0);
     }
     result.set(0, result.get(0) * sign);
     return result;
   }
 
   public static void main(String[] args) {
-    System.exit(GenericTest
-                    .runFromAnnotations(
-                        args, new Object() {}.getClass().getEnclosingClass())
-                    .ordinal());
+    System.exit(
+        GenericTest
+            .runFromAnnotations(args, "IntAsArrayMultiply.java",
+                                new Object() {}.getClass().getEnclosingClass())
+            .ordinal());
   }
 }
